[tool.poetry]
name = "VisionGauge"
version = "0.0.1"
description = "A computer vision model to detect and read u-tube manometers."
authors = ["Clayton Silva dos Santos <santoscsdos@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
torch = ">=2.9.0"
torchvision = ">=0.24.0"
ultralytics = ">=8.4.14"
huggingface_hub = ">=1.4.0"
albumentations = ">=2.0.8"
tqdm = ">=4.67.3"
cv2 = ">=4.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
