[project]
name = "visiongauge"       
version = "0.0.1"
description = "A computer vision model to detect and read u-tube manometers."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9,<3.15"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "ultralytics>=8.0.0",
    "huggingface_hub>=0.20.0",
    "datasets>=2.14.0",
    "albumentations>=1.3.0",
    "tqdm>=4.65.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0"
]
authors = [
  {name = "Clayton Silva dos Santos", email = "santoscsdos@gmail.com"},
  {name = "Marcos Noboru Arima", email = "mnoboru@n-thermo.com.br"}
]
maintainers = [
  {name = "Clayton Silva dos Santos", email = "santoscsdos@gmail.com"}
]

[tool.poetry]
packages = [
    { include = "VisionGauge", from = "." }
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
